# be-there

./: .gitignore  AGENTS.md  LICENSE  OVERVIEW.md  README.md  be-there.ahk  harken.ahk  justfile
.github/: CODEOWNERS
.github/workflows/: dev.yml  release.yml
LICENSES/: winri-MIT.txt
config/: config.example.json  config.example.toml
docs/: COMPILE.md  INSTALL.md  RELEASE.md
src/hotkeys/: apps.ahk  directional_focus.ahk  global_hotkey.ahk  scrolling.ahk  unbound.ahk  window.ahk  window_walker.ahk
src/lib/: JXON.ahk  VD.ahk  carousel.ahk  command_toast.ahk  config_loader.ahk  device_detect.ahk  directional_focus.ahk  focus_border.ahk  focus_or_run.ahk  scrolling_mode.ahk  scrolling_overview.ahk  state_store.ahk  toml.ahk  virtual_desktop.ahk  window_inspector.ahk  window_manager.ahk  window_walker.ahk
tools/: build_release.ps1  detect_src_changes.ps1  set_release_env.ps1
tools/focus_border_helper/: Cargo.toml
tools/focus_border_helper/src/: main.rs
