[package]
name = "harken_focus_border_helper"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dependencies.windows]
version = "0.62"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_DataExchange",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging"
]

[dependencies.iced]
git = "https://github.com/sub07/iced.git"
branch = "custom-winri"
features = [
    "wgpu",
    "canvas",
    "tokio",
    "crisp"
]
default-features = false
